# indolent

./: .coverage  .gitignore  CHANGELOG.md  pyproject.toml  readme.md  tasks.py
docs/: ai.md  requirements.md  timetracking.md
documentation/: timetracking.md
src/: app.py  db.py  habits.db
src/entities/: habit_entity.py
src/repositories/: habit_repository.py
src/services/: habit_service.py
src/tests/: habit_entity_test.py
src/ui/: ui.py
