[project]
name = "indolent"
version = "0.1.0"
description = ""
authors = [
    {name = "hatonlee",email = "hatonen.leevi@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]
